Fix use of deprecated new URL(String)